--- a/styles/main.css
+++ b/styles/main.css
@@ -23,8 +23,8 @@
   background-repeat: no-repeat;
 }
 
-.content-block {
-  background-color: #8b7591;
+.content-block1,
+.content-block2 {
   width: 542px;
   height: 100px;
   margin: 0 auto;
@@ -38,8 +38,17 @@
       -ms-flex-pack: center;
           justify-content: center;
   font-size: 20px;
+  color: #fff;
   margin-top: 20px;
   margin-bottom: 20px;
-  color: #fff;
+}
+
+.content-block1 {
+  background-color: #8b7591;
+}
+
+.content-block2 {
+  background-color: bisque;
+  color: #000;
 }
 /*# sourceMappingURL=main.css.map */
