--- a/styles/main.scss
+++ b/styles/main.scss
@@ -14,8 +14,8 @@
     background-repeat: no-repeat;
 }
 
-.content-block {
-    background-color: rgb(139, 117, 145);
+.content-block1,
+.content-block2 {
     width: 542px;
     height: 100px;
     margin: 0 auto;
@@ -23,7 +23,17 @@
     align-items: center;
     justify-content: center;
     font-size: 20px;
+    color: #fff;
     margin-top: 20px;
     margin-bottom: 20px;
-    color: #fff;
+}
+
+.content-block1 {
+    background-color: rgb(139, 117, 145);
+    
+}
+
+.content-block2 {
+    background-color: bisque;
+    color: #000;
 }
