--- a/styles/main.css
+++ b/styles/main.css
@@ -1,6 +1,6 @@
 .wrapper {
   width: 800px;
-  margin: 20px auto;
+  margin: 0 auto;
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -24,7 +24,8 @@
 }
 
 .content-block1,
-.content-block2 {
+.content-block2,
+.content-block3 {
   width: 542px;
   height: 100px;
   margin: 0 auto;
@@ -50,5 +51,29 @@
 .content-block2 {
   background-color: bisque;
   color: #000;
+}
+
+.content-block3 {
+  background-color: cornflowerblue;
+}
+
+.input-click {
+  width: 542px;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-pack: distribute;
+      justify-content: space-around;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+.button {
+  width: 40px;
+}
+
+input {
+  width: 400px;
 }
 /*# sourceMappingURL=main.css.map */
