--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,6 +1,6 @@
 .wrapper {
     width: 800px;
-    margin: 20px auto;
+    margin: 0 auto;
     display: flex;
     flex-direction: column;
     align-items: center;    
@@ -15,7 +15,8 @@
 }
 
 .content-block1,
-.content-block2 {
+.content-block2,
+.content-block3 {
     width: 542px;
     height: 100px;
     margin: 0 auto;
@@ -36,4 +37,23 @@
 .content-block2 {
     background-color: bisque;
     color: #000;
+}
+
+.content-block3 {
+    background-color: cornflowerblue;
+}
+
+.input-click {
+    width: 542px;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
+
+.button {
+    width: 40px;
+}
+
+input {
+    width: 400px;
 }
